--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,11 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-allprojects { 
-	apply plugin: 'java'
-	apply plugin: 'maven'
-	apply plugin: 'maven-publish'
-	apply plugin: 'application'
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
+    apply plugin: 'application'
 }
 
 /*
@@ -18,8 +18,8 @@ allprojects {
 description = """Exercises - Gradle"""
 group = 'dangrew.uk'
 
-def buildNumberFromEnvironment = System.getenv()[ 'VERSION_NUMBER' ]
-def buildNumberForThisEnvironment = ( buildNumberFromEnvironment != null ? buildNumberFromEnvironment : 'WORKSPACE' ) 
+def buildNumberFromEnvironment = System.getenv()['VERSION_NUMBER']
+def buildNumberForThisEnvironment = (buildNumberFromEnvironment != null ? buildNumberFromEnvironment : 'WORKSPACE')
 version = buildNumberForThisEnvironment
 
 /*
@@ -32,7 +32,7 @@ compileJava {
 
 javafx {
     version = "11"
-    modules = [ 'javafx.base', 'javafx.controls', 'javafx.media', 'javafx.graphics']
+    modules = ['javafx.base', 'javafx.controls', 'javafx.media', 'javafx.graphics']
 }
 
 sourceSets {
@@ -41,7 +41,7 @@ sourceSets {
             srcDir 'src'
         }
         resources {
-			srcDir 'src'
+            srcDir 'src'
         }
     }
     test {
@@ -50,8 +50,8 @@ sourceSets {
         }
         resources {
 //resources are dotted through the folder - arguably against conventions
-			srcDir 'src'
-        	srcDir 'test'
+            srcDir 'src'
+            srcDir 'test'
         }
     }
 }
@@ -60,19 +60,20 @@ sourceSets {
  * DEPENDENCIES: define repos for resolving and dependencies to resolve
  */
 repositories {
-     mavenCentral()
-     maven { url "http://repo.maven.apache.org/maven2" }
+    mavenCentral()
+    maven { url "http://repo.maven.apache.org/maven2" }
 }
 
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    compile group: 'org.json', name: 'json', version:'20151123'
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'
-    
-    testCompile group: 'junit', name: 'junit', version:'4.12'
-    testCompile group: 'pl.pragmatists', name: 'JUnitParams', version:'1.0.5'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version:'1.3'
-    testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.3'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.3'
+
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.0.5'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
 }
 
 /*
@@ -87,22 +88,22 @@ test {
         events "passed", "skipped", "failed", "standardOut", "standardError"
     }
     reports {
-	    junitXml.enabled = true
-	    html.enabled = false
+        junitXml.enabled = true
+        html.enabled = false
     }
 }
 
 /*
  * INTEGRATION TESTS: configure reports and scope of tests
  */
-task integrationTests( type: Test ) {
-  	filter {
-  		includeTestsMatching "*IT"
-  	}
-  
-	testLogging.events = test.testLogging.events
-	reports.junitXml.enabled = test.reports.junitXml.enabled
-	reports.html.enabled = test.reports.html.enabled
+task integrationTests(type: Test) {
+    filter {
+        includeTestsMatching "*IT"
+    }
+
+    testLogging.events = test.testLogging.events
+    reports.junitXml.enabled = test.reports.junitXml.enabled
+    reports.html.enabled = test.reports.html.enabled
 }
 check.dependsOn integrationTests
 
@@ -110,8 +111,8 @@ check.dependsOn integrationTests
  * TEST PACKAGING: packaging tests
  */
 task packageTests(type: Jar) {
-  from sourceSets.test.output
-  classifier = 'tests'
+    from sourceSets.test.output
+    classifier = 'tests'
 }
 artifacts.archives packageTests
 
